<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/card_margin_x_2"
    app:cardElevation="0.5dp"
    app:cardCornerRadius="7dp"
    app:cardBackgroundColor="@color/colorCardBackground"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_16dp"
        android:layout_marginRight="@dimen/layout_margin_16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp">

        <ImageView
            android:id="@+id/player_badge"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/badge_home"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_person"
            android:transitionName="@string/players"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/player_badge"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/card_margin_x"
            android:text="@string/players"
            android:textColor="@color/colorTextLight"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/player_position"
            android:text="@string/position"
            android:textColor="@color/colorTextExtraLight"
            android:gravity="center|top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/player_name"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>