<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="@dimen/card_margin_y"
    android:layout_marginRight="@dimen/card_margin_y"
    android:layout_marginTop="@dimen/card_margin_x_2"
    android:layout_marginBottom="@dimen/card_margin_x_2"
    app:cardElevation="0.5dp"
    app:cardCornerRadius="7dp"
    app:cardBackgroundColor="@color/colorCardBackground"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_16dp"
        android:layout_marginRight="@dimen/layout_margin_16dp"
        android:layout_marginTop="@dimen/card_margin_y">

        <TextView
            android:id="@+id/date_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorTextExtraLight"/>

        <TextView
            android:id="@+id/home_team"
            android:textSize="15sp"
            android:textColor="@color/colorTextLight"
            android:gravity="end"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/score_layout"
            android:layout_toLeftOf="@id/score_layout"
            android:text="@string/team_a"
            tools:ignore="RelativeOverlap" />

        <LinearLayout
            android:id="@+id/score_layout"
            android:clickable="false"
            android:background="@drawable/layout_rounded_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/date_match"
            android:layout_marginLeft="@dimen/layout_margin_16dp"
            android:layout_marginRight="@dimen/layout_margin_16dp"
            android:layout_marginBottom="@dimen/layout_margin_16dp"
            android:layout_marginTop="@dimen/layout_margin_16dp"
            android:orientation="horizontal"
            android:padding="5dp">
            <TextView
                android:id="@+id/home_score"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/colorTextDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/card_margin_y"
                android:layout_marginRight="@dimen/card_margin_y"/>

            <TextView
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/colorTextLight"
                android:fontFamily="sans-serif-thin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strip"
                android:layout_gravity="center_horizontal"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/away_score"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/colorTextDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/away_team"
            android:textSize="15sp"
            android:textColor="@color/colorTextLight"
            android:layout_centerVertical="true"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/score_layout"
            android:layout_toEndOf="@id/score_layout"
            android:text="@string/team_b"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>