<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/colorBackground"
    tools:context=".ui.match.detail.MatchDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.PopupOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:expandedTitleMarginStart="120dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Headline"
            app:expandedTitleMarginBottom="35dp"
            app:titleEnabled="true">

            <RelativeLayout
                android:id="@+id/headerContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/player_banner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:foreground="@drawable/dark_bottom_gradient"
                    android:contentDescription="@string/players" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/dark_bottom_gradient" />

                <ImageView
                    android:id="@+id/player_badge"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/ic_person"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/layout_margin_16dp"
                    android:layout_marginStart="@dimen/layout_margin_16dp"
                    android:contentDescription="@string/players"
                    android:transitionName="@string/players"
                    tools:ignore="UnusedAttribute"/>

                <TextView
                    android:id="@+id/player_position"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginLeft="120dp"
                    android:layout_marginStart="120dp"
                    android:layout_marginBottom="11dp"
                    android:layout_alignParentBottom="true"
                    android:text="@string/position"
                    android:textAlignment="center"
                    android:textColor="@color/colorBackground" />

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/colorBackground"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_marginLeft="@dimen/card_margin_y"
                android:layout_marginRight="@dimen/card_margin_y"
                android:layout_marginTop="@dimen/card_margin_x"
                app:cardElevation="0.5dp"
                app:cardCornerRadius="7dp"
                app:cardBackgroundColor="@color/colorCardBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin_16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|top"
                            android:text="@string/weight"
                            android:textColor="@color/colorTextExtraLight"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/player_weight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|top"
                            android:text="@string/weight"
                            android:textColor="@color/colorTextLight"
                            android:fontFamily="sans-serif-light"
                            android:textSize="35sp"
                            tools:ignore="UnusedAttribute" />

                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/card_margin_x"
                        android:layout_marginRight="@dimen/card_margin_x"
                        android:background="#dedede"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|top"
                            android:text="@string/height"
                            android:textColor="@color/colorTextExtraLight"
                            android:textSize="15sp"/>

                        <TextView
                            android:id="@+id/player_height"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|top"
                            android:text="@string/height"
                            android:textColor="@color/colorTextLight"
                            android:fontFamily="sans-serif-light"
                            android:textSize="35sp"
                            tools:ignore="UnusedAttribute" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/score_layout"
                android:background="@drawable/layout_rounded_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_16dp"
                android:layout_marginRight="@dimen/layout_margin_16dp"
                android:layout_marginBottom="@dimen/layout_margin_16dp"
                android:layout_marginTop="@dimen/layout_margin_16dp"
                android:layout_gravity="center_horizontal"
                android:padding="5dp">
                <TextView
                    android:textSize="15sp"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:layout_marginLeft="@dimen/layout_margin_16dp"
                    android:layout_marginRight="@dimen/layout_margin_16dp" />
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_marginLeft="@dimen/card_margin_y"
                android:layout_marginRight="@dimen/card_margin_y"
                android:layout_marginBottom="@dimen/card_margin_y"
                app:cardElevation="0.5dp"
                app:cardCornerRadius="7dp"
                app:cardBackgroundColor="@color/colorCardBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/player_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16sp" />
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>